<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="com.ambient.stargaze.helpers.StringUtils" />
        <variable
            name="viewmodel"
            type="com.ambient.stargaze.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".ui.home.HomeFragment">

        <!--        <ProgressBar-->
<!--            android:id="@+id/progress"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:indeterminateTint="@color/colorGrey"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_preview_image_of_picture_of_the_day"
            android:scaleType="fitCenter"
            android:visibility='@{viewmodel.apodResponse.mediaType.equals("image") ? View.VISIBLE : View.GONE }'
            app:imageUrl="@{viewmodel.apodResponse.url}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoPlay="true"
            android:visibility='@{viewmodel.apodResponse.mediaType.equals("video") ? View.VISIBLE : View.GONE }'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showFullScreenButton="false"
            app:showSeekBar="false"
            app:showVideoCurrentTime="false"
            app:showVideoDuration="false"
            app:showYouTubeButton="false"
            app:videoId="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_linear_top"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/imCalender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/textStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:textColor="@color/colorTextWhiteSecondary"
                    android:text="@{StringUtils.changeDateFormat(viewmodel.apodResponse.date)}"
                    tools:text="20 June 2020" />

                <TextView
                    android:id="@+id/tvHeading"
                    style="@style/textStyleSubHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:layout_marginBottom="@dimen/spacing_xsmall"
                    android:textColor="@color/colorTextWhitePrimary"
                    android:text="@{viewmodel.apodResponse.title}"
                    tools:text="Eclipse under the ISS" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imCalender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/ic_calender"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true"
                android:contentDescription="@string/content_desc_calender_picker" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:background="@drawable/bg_linear_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/spacing_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/actionContainer"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvDesc"
                    style="@style/textStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:textColor="@color/colorTextWhitePrimary"
                    android:text="@{viewmodel.apodResponse.explanation}"
                    tools:text="@string/dummy" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/actionContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2">

                <ImageView
                    android:id="@+id/ivPlay"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_play"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility='@{viewmodel.apodResponse.mediaType.equals("video") ? View.VISIBLE : View.GONE }'
                    android:padding="@dimen/spacing_small"
                    android:contentDescription="@string/content_desc_zoom_image" />

                <ImageView
                    android:id="@+id/ivPause"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_pause"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    android:padding="@dimen/spacing_small"
                    android:contentDescription="@string/content_desc_zoom_image" />

                <ImageView
                    android:id="@+id/ivZoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_zoom"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    tools:visibility="gone"
                    android:visibility='@{viewmodel.apodResponse.mediaType.equals("image") ? View.VISIBLE : View.GONE }'
                    android:padding="@dimen/spacing_small"
                    android:contentDescription="@string/content_desc_zoom_image" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>